--- a/version 1/.settings/org.eclipse.core.resources.prefs
+++ b/version 1/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
-#Sun Jan 25 14:43:49 EST 2015
+#Mon Mar 16 20:17:23 EDT 2015
 eclipse.preferences.version=1
 encoding//src/graphic/Main.java=UTF-8
+encoding//src/model/MyPoint.java=UTF-8
+encoding//src/recognizer/FeatureExtractor.java=UTF-8
